Bug 396542 nsFocusManager should restore caret browsing mode when an editor loses focus r=ehsan